kubernetes/base/headscale/bases/control-server/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  labels:
    project: headscale
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      project: headscale
      component: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        project: headscale
        component: server
    spec:
      containers:
        - name: headscale
          image: headscale/headscale:0.22.3
          args:
            - headscale
            - serve
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config-dir
              mountPath: /etc/headscale
            - name: config-yaml
              mountPath: /etc/headscale/config.yaml
              subPath: config.yaml
            - name: run-data
              mountPath: /var/lib/headscale
      volumes:
        - name: config-dir
          persistentVolumeClaim:
            claimName: headscale-config
        - name: run-data
          persistentVolumeClaim:
            claimName: headscale-run-data
        - name: config-yaml
          configMap:
            name: headscale-config
            items:
              - key: config.yaml
                path: config.yaml
