kubernetes/base/headscale/bases/control-server/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  labels:
    project: headscale
    component: server
spec:
  selector:
    project: headscale
    component: server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
