kubernetes/base/headscale/bases/control-server/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  labels:
    project: headscale
    component: server
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
    nginx.ingress.kubernetes.io/enable-cors: true
    nginx.ingress.kubernetes.io/cors-allow-origin: https://dashboard.headscale.k8s.funkyboy.zone
spec:
  ingressClassName: nginx
  rules:
  - host: control.headscale.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headscale
            port:
              number: 80
  tls:
    - hosts:
        - control.headscale.k8s.funkyboy.zone
      secretName: headscale-ingress-cert
